--- a/Spring+Vue/scoula/backend/src/main/resources/application.properties
+++ b/Spring+Vue/scoula/backend/src/main/resources/application.properties
@@ -4,3 +4,8 @@ jdbc.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 jdbc.url=jdbc:log4jdbc:mysql://localhost:3306/login
 jdbc.username=jonghyun
 jdbc.password=1234
+
+weather.url=http://api.openweathermap.org/data/2.5/weather
+# ???? ??? API KEY ??
+weather.api_key=de8fc442bda2416ea480ea8af91f9536
+weather.icon_url=http://openweathermap.org/img/w/%s.png
